--- a/css/style.css
+++ b/css/style.css
@@ -62,6 +62,11 @@ small {
 	font-size: 0.75rem;
 }
 
+/* SECTION */
+section {
+	scroll-margin: 1rem;
+}
+
 /* DROPDOWN */
 summary {
 	position: relative;
