--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,10 @@
 	/* VARIABLES */
 	--black: #000000;
 	--white: #FFFFFF;
-	--lightgray: #D3D3D3;
-	--gray: #808080;
+	--gray: #D3D3D3;
 	--accent: #2e8b57;
 	--accent-dark: hwb(146 18% 55%);
-	--shadow: 0 0 1rem var(--lightgray);
+	--shadow: 0 0 1rem var(--gray);
 
 	margin: 0;
 	padding: 0;
@@ -74,7 +73,7 @@ summary {
 	margin: 0 1rem;
 	padding: 1rem 0;
 
-	border-bottom: solid 0.0625rem var(--gray);
+	border-bottom: solid 0.0625rem var(--black);
 
 	text-transform: uppercase;
 	font-size: 0.75rem;
@@ -102,8 +101,8 @@ details[open] summary::after {
 article {
 	margin: 1rem;
 	
-	color: var(--gray);
-	border: solid 0.0625rem var(--gray);
+	color: var(--black);
+	border: solid 0.0625rem var(--black);
 	border-radius: 0.5rem;
 }
 
@@ -112,7 +111,7 @@ article a {
 	margin: 1rem;
 	padding: 1rem;
 
-	border: solid 0.0625rem var(--gray);
+	border: solid 0.0625rem var(--black);
 	border-radius: 0.25rem;
 
 	font-size: 0.75rem;
