--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
+/*
+- Body
+- Header
+- Footer
+- Sections
+- Dropdowns
+- Project tiles
+- Contact section
+- Headings
+- Paragraphs
+- Links
+*/
+
 * {
 	/* VARIABLES */
 	--black: #000000;
